<resources>
    <string name="app_name">Vertretungsplan</string>
    <string name="app_name_short">Vertretungen</string>

    <!-- OverviewSectionsAdapter -->
    <string name="tab_events_name">Termine</string>
    <string name="tab_substitutions_name">Ansicht %d</string>

    <!-- OverviewAdapter -->
    <string name="overview_adapter_group_student">Klasse %s</string>
    <string name="overview_adapter_group_teacher">Lehrer %s</string>
    <string name="overview_adapter_entry_single">%s Vertretung</string>
    <string name="overview_adapter_entry_multiple">%s Vertretungen</string>
    <string name="overview_adapter_immediacity">Stand: %1$s %2$s</string>

    <!-- Overview: Events -->
    <string name="overview_events_info">Veranstaltung</string>

    <!-- Account Names -->
    <string name="account_name_student">Schülervertretungsplan</string>
    <string name="account_name_teacher">Lehrervertretungsplan</string>

    <!-- Process Dialog Text -->
    <string name="loading_text">Aktualisieren...</string>
    <string name="loading_subtext">Neue Vertretungen werden heruntergeladen</string>

    <!-- No Data Info Texts -->
    <string name="no_data">Keine Vertretungen</string>
    <string name="no_data_downloaded">Keine Daten heruntergeladen</string>

    <!-- Connection Info Texts -->
    <string name="activity_login_generic_error_template">Etwas ist fehlgeschlagen.\n%s</string>
    <string name="io_error">Etwas ist fehlgeschlagen. Prüfen Sie Ihre Internetverbindung oder versuchen Sie sich erneut anzumelden.</string>
    <string name="authentication_error">Anmeldedaten fehlerhaft.</string>
    <string name="authentication_error_reregister">Neu anmelden</string>
    <string name="download_success">Daten erfolgreich heruntergeladen</string>

    <!-- Date Format -->
    <string name="date_format_only_time">HH:mm</string>

    <!-- Dates Short Names -->
    <string name="today">Heute</string>
    <string name="tomorrow">Morgen</string>
    <string name="Yesterday">Gestern</string>

    <string name="MONDAY">Montag</string>
    <string name="TUESDAY">Dienstag</string>
    <string name="WEDNESDAY">Mittwoch</string>
    <string name="THURSDAY">Donnerstag</string>
    <string name="FRIDAY">Freitag</string>
    <string name="SATURDAY">Samstag</string>
    <string name="SUNDAY">Sonntag</string>

    <!-- Detail Placeholders -->
    <string name="placeholder_time">%s. Stunde</string>
    <string name="detail_placeholder_room">%1$s → %2$s</string>
    <string name="mark_class_menu_item_title">Markieren</string>
    <string name="placeholder_reference">Gefunden in "%s"</string>

    <!-- Widget Configure -->
    <string name="widget_configure_toolbar_titel">Neues Widget</string>
    <string name="widget_configure_button_text">Widget erstellen</string>
    <string name="widget_configure_info_text">Bitte wählen Sie aus, welcher Vertretungsplan im Widget angezeigt werden soll.</string>
    <string name="widget_configure_no_account">Bitte melden Sie sich zunächst in der App an.</string>

    <!-- Widget Error -->
    <string name="widget_error_text">Es konnten keine Daten abgerufen werden. Versuchen Sie, dieses Widget neu zu erstellen.</string>

    <!-- Information -->
    <string name="info_menuitem_title">Informationen</string>
    <string name="info_title">Informationen</string>
    <string name="info_app_with_version">Vertretungsplan %s</string>
    <string name="info_developer">© 2020 Nils Beyer</string>
    <string name="info_libaries">JSoup 1.11.3\n\nCopyright © 2009 - 2017 Jonathan Hedley (jonathan@hedley.net)\n\
Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.\n\n\n\
Android Support Library\n\
Copyright © 2011 The Android Open Source Project\n\
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n\n\
GSON\n\
Copyright © 2008 Google Inc.\n\
Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\
http://www.apache.org/licenses/LICENSE-2.0\n\
Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n\n\
Material Design Icons\n\
Copyright © 2018 google/material-design-icons\n\
Licensed under the Apache License, Version 2.0 (the "License");\
you may not use this file except in compliance with the License.\
You may obtain a copy of the License at\n\n\
http://www.apache.org/licenses/LICENSE-2.0\n\n\
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and limitations under the License.
    </string>
    <string name="info_warning_debug">Diese Version ist ein %s-Build</string>
    <string name="info_title_libraries">Lizenzen</string>

    <!-- Login -->
    <string name="login_infotext">Bitte melden Sie sich mit Ihren Benutzerdaten für den Vertretungsplan an</string>
    <string name="login_button">Anmelden</string>
    <string name="login_username">Benutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_error">Die eingegebenen Daten stimmen nicht.</string>
    <string name="login_info">Hinweis: Es handelt sich um ein privates, inoffizielles Projekt. Alle Angaben ohne Gewähr.</string>

    <!-- Preferences: Markierte Kurse -->
    <string name="marked_courses_title">Markierte Kurse</string>
    <string name="marked_courses_menu_entry">Markierte Kurse</string>
    <string name="marked_courses_remove_all">Alle entfernen</string>
    <string name="marked_courses_info">Hier können Sie Kurse definieren, die besonders hervorgehoben werden sollen. Bitte geben Sie den vollständigen und offiziellen Namen Ihrer Kurse an.</string>
    <string name="marked_courses_delete">Löschen</string>
    <string name="title_activity_widget_configure">WidgetConfigureActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
