<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="de.nils_beyer.android.Vertretungen.LoginActivity">


        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_account_spinner"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login_username"
            android:inputType="textPersonName" />

        <TextView
            android:text="@string/login_infotext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAlignment="center"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true" />

    <de.nils_beyer.android.Vertretungen.account.AccountSpinner
        android:id="@+id/login_account_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

    </de.nils_beyer.android.Vertretungen.account.AccountSpinner>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:hint="@string/login_password"
            android:layout_below="@+id/login_username"
            android:layout_alignParentStart="true" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_below="@+id/login_password"
            android:gravity="right">

            <TextView
                android:text="@string/login_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_error"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:textStyle="normal|bold"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone" />

            <Button
                android:text="@string/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_btn_login"
                android:singleLine="true"
                android:gravity="right|center_vertical" />
        </LinearLayout>

        <ImageView
            app:srcCompat="@drawable/ic_compare_arrows_black_24dp"
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/progressBar" />


    <TextView
        android:text="@string/login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>


