<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_below="@id/toolbar"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:srcCompat="@drawable/ic_compare_arrows_black_24dp"
            android:id="@+id/imageView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:cropToPadding="false" />

        <TextView
            android:id="@+id/info_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/info_build_variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            tools:text="@string/info_warning_debug" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginBottom="11dp"
            android:layout_marginTop="11dp"
            android:text="@string/info_developer"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:text="Konten"
            android:textAllCaps="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/info_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/info_button_login"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mit einem weiteren Konto anmelden"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <Button
            android:id="@+id/info_button_marked_courses"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Markierte Kurse verwalten"
            android:textAlignment="textStart"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textview10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="12dp"
            android:text="Kalender-Konfiguration"
            android:textAllCaps="true" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="12dp"
            android:paddingStart="12dp">

            <EditText
                android:id="@+id/editText_events_config_param"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Parameter"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@+id/editText_events_config_value"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editText_events_config_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Wert"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editText_events_config_param" />
        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/info_button_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:text="Open-Source Lizenzen anzeigen"
            android:textSize="14sp" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
